[package]
name = "subsystemctl"
version = "0.1.2"
description = "Utility to run systemd in WSL2 with a Linux namespace"
homepage = "https://github.com/sorah/subsystemctl"
repository = "https://github.com/sorah/subsystemctl"
authors = ["Sorah Fukumori <her@sorah.jp>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.19"
clap = "2.33.1"
nix = "0.17.0"
libc = "0.2.71"
env_logger = "0.7.1"
log = "0.4.8"
